solved pmd violations